fixing spacing on mobile views

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -79,7 +79,7 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-// $row-width: rem-calc(1000);
+$row-width: rem-calc(1170);
 // $total-columns: 12;
 // $column-gutter: rem-calc(30);
 
@@ -1096,7 +1096,7 @@ $reveal-overlay-bg: rgba(#000, .77);
 // $reveal-modal-bg: $white;
 // $reveal-position-top: rem-calc(100);
 // $reveal-default-width: 80%;
-// $reveal-max-width: $row-width;
+$reveal-max-width: $row-width / 1.5;
 // $reveal-modal-padding: rem-calc(20);
 $reveal-box-shadow: 0 0 10px rgba(#000,.85);
 
