--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -30,7 +30,7 @@
 		width:60%;
 	}
 	@media #{$large-up} { 
-		width:35%;
+		width:45%;
 	}
 	float:none;
 	margin:0 auto;
