--- a/scss/components/_modals.scss
+++ b/scss/components/_modals.scss
@@ -3,11 +3,18 @@
 	border-radius:50%; 
 	width:30px;
 	height:30px;
-	span { 
-		position: relative;
-		top: -11px;
-		right: -8px;
-		font-size: 29px;
-		color:#fff; 
+	@media #{$small-only} { 
+		display:none;
+		span { display:none; }
 	}
+	@media #{$medium-up} { 
+		span { 
+			position: relative;
+			top: -11px;
+			right: -8px;
+			font-size: 29px;
+			color:#fff; 
+		}
+	}
+
 }
